--- a/.classpath
+++ b/.classpath
@@ -4,8 +4,8 @@
 	<classpathentry kind="src" path="unitTest"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="C:/Users/Johannes/workspace/.metadata/.plugins/junit.extensions.jfcunit/jakarta-regexp-1.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Johannes/workspace/.metadata/.plugins/junit.extensions.jfcunit/jfcunit.jar"/>
 	<classpathentry kind="var" path="JUNIT_HOME"/>
+	<classpathentry kind="lib" path="C:/eclipse/plugins/junit.extensions.jfcunit/jakarta-regexp-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/eclipse/plugins/junit.extensions.jfcunit/jfcunit.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
